<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/searchMavenAppHeaderDescription"
        android:src="@drawable/searchmaven_header" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_toLeftOf="@+id/searchImageButton"
        android:ems="10"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:text="@string/search"
        android:textColor="#d2d2d2" >

        <requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/searchImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/searchEditText"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/searchEditText"
        android:src="@android:drawable/ic_menu_search" 
        android:contentDescription="@string/search"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#d2d2d2" >

            <Button
                android:id="@+id/mainQuickSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#d2d2d2"
                android:text="@string/quick_search"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/pipe"
            android:textColor="#d2d2d2"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" >

            <Button
                android:id="@+id/mainAdvancedSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                android:text="@string/advanced_search"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>